--- a/_i18n/en/_posts/2021-10-14-從三倍券到五倍券.md
+++ b/_i18n/en/_posts/2021-10-14-從三倍券到五倍券.md
@@ -3,10 +3,10 @@
   title: "From triple coupon to five times coupon"
   excerpt: "The Ministry of Economic Affairs has also proposed multiple payment incentive programs such as the \"Taiwan Cloud Market\" to assist in digital transformation."
   image: "/assets/imgs/apples-1841132_1920.jpg"
-  author: "唐鳳、簡孝樺"
+  author: "Audrey Tang, Joke"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
 
