--- a/_posts/2021-10-14-從三倍券到五倍券.md
+++ b/_posts/2021-10-14-從三倍券到五倍券.md
@@ -3,7 +3,7 @@ layout: post
 title: 從三倍券到五倍券
 excerpt: 經濟部也提出「臺灣雲市集」等多元支付獎勵方案，協助進行數位轉型。
 image: /assets/imgs/apples-1841132_1920.jpg
-author: 唐鳳、簡孝樺
+author: 唐鳳、簡就可
 category: blog
 tags:
   - 社會創新
