--- a/_i18n/en/_posts/2021-10-29-ESG-永續與影響力投資.md
+++ b/_i18n/en/_posts/2021-10-29-ESG-永續與影響力投資.md
@@ -1,30 +1,32 @@
 ---
   layout: "post"
-  title: "ESG sustainability and impact investing"
-  excerpt: "For the life of the post-epidemic era, we will open up new ways of taking both sustainability and development into consideration."
+  title: "Sustainability and development: Great bedfellows"
+  excerpt: "Through ESG and impact investment, Taiwan is getting to the heart of the matter in charting a new post-pandemic course."
   image: "/assets/imgs/money-2696219_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+[In my last column](https://pdis.nat.gov.tw/en/blog/%E7%96%AB%E5%BE%8C%E6%8C%AF%E8%88%88-%E4%BA%BA%E4%BA%BA%E6%9C%89%E3%84%97%E3%84%9C%CB%8A/), I introduced the "Quintuple Stimulus Voucher." By the end of October, the total number of paper and digital vouchers issued exceeded 19 million. Now that pandemic control measures are gradually easing, shops around Taiwan are filled with customers.
 
-[in the previous column](https://pdis.nat.gov.tw/zh-tw/blog/%e7%96%ab%e5%be%8c%e6%8c%af%e8 %88%88-%e4%ba%ba%e4%ba%ba%e6%9c%89%e3%84%97%e3%84%9c%cb%8a/), I introduced Taiwan’s five times coupon . A few days ago, paper collection and digital binding have exceeded 17 million people. Now that the anti-epidemic measures are gradually loosening, scenes of people spending in stores can be seen everywhere. While stimulating consumption, how to transform the turbulence brought about by the epidemic into a new impetus to adjust the economic physique is a topic that we continue to invest in. According to Taiwan’s experience, the rapid growth of ESG investment and impact investment in recent years is one of the answers to combining industrial innovation and sustainable development. 
+At the same time as spurring consumption, we are working out how to transform the turbulence brought about by the pandemic into a new impetus to shepherding the economy towards sustainability. One solution shown to work in Taiwan, which combines industrial innovation and sustainable development, is the rapidly developing ESG and impact investment.
 
-ESG means to incorporate "environment", "social responsibility" and "corporate governance" into the evaluation criteria of corporate operations to ensure that corporate operations have a positive impact on society and individuals. Over the past ten years of development, ESG has become an indispensable part of corporate development. In 2020, on the basis of the past, the Taiwan Financial Regulatory Commission will successively promote the "Corporate Governance 3.0-Sustainable Development Blueprint" and "Green Finance Action Plan 2.0" to promote the sustainable development of Taiwan's industry from the perspective of corporate governance and financial investment. 
+ESG means incorporating "environment," "social responsibility" and "corporate governance" into an evaluation criteria ensuring business operations have a positive impact on society and individuals. Over the past decade, ESG has become an indispensable part of corporate development. In 2020, the Taiwan Financial Supervisory Commission built upon this foundation in successively promoting the "Corporate Governance 3.0-Sustainable Development Roadmap" and "Green Finance Action Plan 2.0" to accelerate the sustainable development of Taiwan industry from the perspective of corporate governance and financial investment.
 
-The measures taken by "Corporate Governance 3.0-Sustainability Blueprint" include changing the name of the current corporate social responsibility report to "Sustainability Report or ESG Report", and promoting full Englishization and strengthening of third parties Certification; starting from 2023, in addition to existing food, chemical, financial and insurance industries and listed companies with a capital of more than 5 billion yuan, listed companies with a capital of more than 2 billion yuan must write a sustainability report.
-| |The "Green Finance Action Plan 2.0", which actively expands the development of green financial products and services, is an important action taken by Taiwan to promote ESG. In May 2021, Taiwan’s OTC bought a special board for the perpetual development bond system, and Taiwan’s first batch of socially responsible bonds were also issued and listed on the OTC. Social performance and ESG information revealed that all public equity banks will issue green/social responsibility/sustainable development bonds within 4 years. 
+The measures adopted by the roadmap include renaming the current corporate social responsibility report to "Sustainability Report or ESG Report," promoting the publication of all reports in English and strengthening third-party certification from 2023 onwards. In addition to the existing food, chemical, finance and insurance industries, as well as listed companies with capital exceeding NT$5 billion (US$179.9 million), all listed companies with capital exceeding NT$2 billion will need to produce a sustainability report. 
 
-Through ESG, more and more Taiwanese companies have become the new force of sustainable development. However, the challenges facing sustainable development are increasing. From Covid-19, climate change, and even the mental health of young people, the world’s major risks include various environmental and social aspects. 
+The plan, which expands the development of green financial products and services, is an important step taken by Taiwan to promote ESG. In May 2021, the Taiwan OTC Buying Center established a special board for the "Sustainable Development Bond" system. In conjunction, Taiwan’s first batch of socially responsible bonds were issued and listed on the OTC. Social performance and ESG information revealed that all public equity banks will issue green/social responsibility/sustainable development bonds within four years.
 
-This year coincides with the 51st Anniversary of the World Economic Forum (WEF). WEF has announced "[The Great Reset](https://www.weforum.org/great-reset/)) "" as the title, reveals the "Stakeholder Capitlism" that gathers stakeholders to collaborate across domains. What is exciting is that through the joint efforts of Taiwan's public sector and stakeholders from all walks of life, the ESG concept, which has grown rapidly in recent years, has become one of the actions that combine industries and stakeholders. 
+Through ESG, more and more Taiwan companies have become the new force of sustainable development. At the same time, the challenges are ever increasing. From coronavirus and climate change to the mental health of the younger generations, the world's major risks include a variety of environmental and social issues.
 
-The "[Social Welfare and Social Enterprise Charity Trust Revolving Fund](https://sert.tw/)(social enterprise revolving trust, sert fund)" initiated by the private sector in Taiwan is an example. SERT Fund is Taiwan’s first charitable trust that invests in social enterprises. It is committed to assisting social entrepreneurs in obtaining funds for entrepreneurship. In the past five years, the total amount of SERT Fund investment and sponsorship has exceeded 15 million yuan. Invested in 5 social enterprises, and supported various types of social innovation through sponsorship, action initiatives, scholarship programs, etc. 
+This year marks the World Economic Forum's (WEF) 51st anniversary, and its theme "[The Great Reset](https://www.weforum.org/great-reset/)" indicates the gathering of stakeholders and cross-domain cooperation to establish "stakeholder capitalism." It is heartening that via the efforts of Taiwan's public sector and participants from all walks of life, the rapid rise of the ESG concept in recent years is one of the acts bringing industry and stakeholders together.
 
-In this process, the SERT Fund has observed that, in addition to market pressure, social enterprises often have additional communication costs due to gaps in their social missions and the perception of company operations. Therefore, in 2021, SERT and its strategic partner KPMG Anhou Jianye jointly designed a "Social Impact Preferred Stock" (Social Impact Preferred Stock). 
+One example is the "[Social Enterprise Revolving Trust](https://sert.tw/)" (SERT) initiated by Taiwan's private sector. SERT boasts a value of NT$200 million, and is Taiwan's first charitable trust to invest in social enterprises. It also helps social entrepreneurs obtain seed capital for entrepreneurship. In the past five years, SERT's total investment and sponsorship has surpassed NT$15 million. In addition, it has made equity investments in five social enterprises (SEs) and has supported numerous social innovators through sponsorships, action projects and scholarship programs.
 
-The investment mechanism of special stocks for social influence is to use the feature of "special stocks" that can negotiate investment conditions, allowing investors to discuss investment goals, tracking indicators, and fund exit conditions with social enterprises before investing. In addition, in order to ensure the active participation of stakeholders, the company’s articles of association have locked in its social mission, and an influence agenda (Agenda) has been added to the agenda of the board of directors to ensure that the achievement of the social mission is tracked. 
+During this process, SERT has observed that SEs often have additional communication costs due to gaps in social missions, as well as the perception of company operations whilst facing market pressures. This year, SERT and its strategic partner KPMG have jointly designed the "Social Impact Preferred Stock (SIPS)."
 
-There is a saying, "If you are not a part of the solution, you are a part of the problem" (If you are not a part of the solution, you are a part of the problem), Taiwan uses ESG and influence Investment, go deep into the core of the problems facing the world, and open up new ways for sustainability and development for life in the post-epidemic era. 
+The investment mechanism of SIPS aims to utilize the ability of "special stocks" to negotiate investment conditions. Furthermore, in order to secure the active participation of stakeholders, the company's articles of association lock in its social objective and add an influence item to the board meeting agenda so as to assure the tracking of the social mission's achievement. In July, SERT successfully launched its first "Social Impact Special Unit" investment.
+
+As the saying goes: "If you are not a part of the solution, you are a part of the problem." Through ESG and impact investment, Taiwan is getting to the heart of the matter in charting a new post-pandemic course through which sustainability and development play an equally important role.
