--- a/_i18n/en/_posts/2021-11-05-虛實整合-突破疫情限制.md
+++ b/_i18n/en/_posts/2021-11-05-虛實整合-突破疫情限制.md
@@ -1,21 +1,20 @@
 ---
   layout: "post"
-  title: "Integration of virtual reality and reality, breaking through epidemic restrictions"
+  title: "Shared Reality breaks through epidemic restrictions"
   excerpt: "The true spirit of \"Shared Reality\" is to allow everyone to transcend physical and time constraints."
   image: "/assets/imgs/20211105.jpg"
-  author: "唐鳳、彭美琪、彭筱婷"
+  author: "Audrey Tang, Mickey Peng, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
-
-The Presidents Cup hackathon entered the fourth this year, and the epidemic was heating up at the beginning of the run. As an important collaboration platform for the government and citizens, the team flexibly adapts and adjusts the way of participation: the first workshop is fully remote, and the second workshop is held using the concept of "Shared Reality", which is not affected by the epidemic Interrupted. 
+The Presidential Hackathon entered the fourth this year, and the epidemic was heating up at the beginning of the run. As an important collaboration platform for the government and citizens, the team flexibly adapts and adjusts the way of participation: the first workshop is fully remote, and the second workshop is held using the concept of "Shared Reality", which is not affected by the epidemic Interrupted. 
 
 Even though the epidemic is slowing down, in my opinion, the experience and results of this integration of virtuality and reality are still worthy of your reference. 
 
-The first and second President’s Cup hackathon workshops follow the traditional hackathon process. All people gather to post ideas and discussions in the same physical location. Group briefings, provide consultations for each group member. After the outbreak of the global epidemic in 2020, each team was arranged in an independent space for the third session, and the briefing consultation with the review was also changed to video. 
+The first and second Presidential Hackathon workshops follow the traditional hackathon process. All people gather to post ideas and discussions in the same physical location. Group briefings, provide consultations for each group member. After the outbreak of the global epidemic in 2020, each team was arranged in an independent space for the third session, and the briefing consultation with the review was also changed to video. 
 
 Last year’s experience has made us discover: Although the entire online approach can effectively reduce contact and ensure the effectiveness of epidemic prevention, it is difficult to ignite the sparks sparked by physical exchanges. Participation and connection quality at a fixed time limit the physical field; and the traditional full-physical approach not only has concerns about epidemic prevention, but also the sound of each table interferes with each other and may not be able to see clearly when presenting presentations. And so on physical limitations. 
 
@@ -23,6 +22,6 @@ In view of this, with the assistance of the "g0v group" this year, we adopted a 
 
 As a result, the problem analysis of each team this year is indeed more in-depth, not only "explain the problem", such as the lack of integration of open data, but also "solve the problem", and work together to find specific solutions for users to participate in data governance . 
 
-The main axis of the President’s Cup hackathon is to use the investment of the citizen community to face existing problems, spur new ideas, and ultimately become a concrete plan to enhance the effectiveness of public services. In my opinion, the President’s Cup hackathon, in addition to the impressive results of the participating teams, the collaboration process itself is a pioneering demonstration for the integration of virtual and real work models. 
+The main axis of the Presidential Hackathon is to use the investment of the citizen community to face existing problems, spur new ideas, and ultimately become a concrete plan to enhance the effectiveness of public services. In my opinion, the Presidential Hackathon, in addition to the impressive results of the participating teams, the collaboration process itself is a pioneering demonstration for the integration of virtual and real work models. 
 
 I think the true spirit of "shared reality" is to allow everyone to transcend physical and time constraints and combine virtual and physical to create a space suitable for each other. Only in this way can we fully experience the feeling of being present together, and then create the future together and become an autonomous and interconnected "Multiverse". 
