--- a/_i18n/zh-TW/_posts/2021-11-06-展望-2022-數位盟友-挺身而出.md
+++ b/_i18n/zh-TW/_posts/2021-11-06-展望-2022-數位盟友-挺身而出.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 展望 2022：數位盟友，挺身而出
-excerpt: 網路空間裡的政府與公民，即將形成「全球社群」。
+excerpt: 網路空間裡的眾多政府與公民，即將形成「全球社群」。
 image: /assets/imgs/FDZgAqpaMAEaisz.jpg
 author: 唐鳳、馮瓊儀
 category: blog
