--- a/_i18n/en/_posts/2021-11-06-展望-2022-數位盟友-挺身而出.md
+++ b/_i18n/en/_posts/2021-11-06-展望-2022-數位盟友-挺身而出.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Looking ahead to 2022: digital allies come forward"
-  excerpt: "Governments and citizens in cyberspace are about to form a \"global community.\""
+  title: "World in 2022: Digital allies will unite"
+  excerpt: "A global neighborhood of governments and citizens will be formed in the online space."
   image: "/assets/imgs/FDZgAqpaMAEaisz.jpg"
-  author: "唐鳳、馮瓊儀"
+  author: "Audrey Tang, Frances Feng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+The Covid-19 pandemic wreaked havoc around the globe in 2020 and 2021. The coronavirus is likely to follow us well into 2022. People around the globe will keep looking for effective ways to cope with the shared challenges we experience that transcend physical boundaries. Although it might seem frightening that borders no longer provide the kind of protection we need to keep us safe in the physical world, we will see an explosion of opportunities in the digital world – opportunities relating to the formation of a global neighborhood.
 
-The epidemic that has ravaged the world so far in 2020 will continue for more than half of 2022. The world, regardless of national borders, must seek effective methods to meet our common challenges. But even if the &quot;national boundary&quot; fails to provide the necessary protection in the physical world, which is disturbing, we will also witness the explosion of opportunities in the digital world - especially the formation of a &quot;global community&quot;. 
+As the erosion of the traditional concepts of countries, nations and states accelerates in the digital world, the idea of “neighborhoods” based on shared values is flourishing.
 
-With the dissolution of traditional national concepts, all parts of the world have accelerated the evolution of the digital world. The &quot;community&quot; thinking based on shared values is now growing stronger. 
+We have already seen examples in 2020 and 2021, such as the #MilkTeaAlliance. This is a collaboration of pro-democracy citizens that originated from a meme depicting many jurisdictions around east Asia holding up their respective “popular drinks” (such as Taiwanese bubble tea) in solidarity. 2022 will see continued evolution toward a generation where distance is no longer measured in meters, but rather in terms of the experiences one shares in common with other people and groups.
 
-In the past two years, we have witnessed similar cases, such as the &quot;MilkTeaAlliance&quot; (#MilkTeaAlliance) meme. Pearl milk tea) to show unity. In 2022, we will witness the evolution of a new generation: the distance is no longer based on kilometers, but based on the number of common experiences. 
+Global neighborhoods will also bring changes to the way norms are established. Indeed, we will find ourselves in a world where the establishment of norms is no longer monopolized by governments and multilateral organizations. Decentralized, non-political and non-state actors will play critical roles in this.
 
-The global community is about to change the existing international system. We will find ourselves in a new world: rules are no longer monopolized by countries and multinational organizations. Decentralized, non-political, non-state actors will play a more critical role. 
+Taiwan’s digital democracy can be seen as a precursor in this regard. On the country’s online platform, join.gov.tw, anyone can file a petition. There is no need to be affiliated with any political party. Twice a month, for petitions that gather 5,000 signatures, we hold face-to-face collaborative meetings across related ministries to explore ways to incorporate them into policymaking. In this way, even those who are too young to vote can nevertheless have a way to start a movement and set a norm.
 
-Taiwan’s digital democracy can be regarded as the forerunner of this new world. On the online platform &quot;join.gov.tw&quot;, anyone can initiate a proposal to the whole country without any political party endorsement. As long as there are proposals signed by more than 5,000 people, we will hold two face-to-face inter-ministerial collaboration meetings every month to discuss how to incorporate these ideas into government decision-making. In this way, even young people who do not have the right to vote can start campaigns and formulate new systems. 
+Technology will be used even more widely to facilitate crowdsourced policymaking. Governance models based on what I call “People-Public-Private Partnerships” are set to be the key to government transformation. The creation of Taiwan’s Mask Maps showed people early on in the pandemic where masks were available in stores. Meanwhile, SMS-based contact tracing and online vaccination-appointment systems resulted from collaboration incorporating open data from social-sector platforms, government departments and private-sector companies.
 
-Citizen science and technology will become more popular, speeding up the policy process that promotes the co-creation of the masses. The governance model initiated by the social sector and implemented by public and private cooperation will become the key to government transformation. In Taiwan, the production of mask maps allowed the public to know which stores still have masks in the early stages of the epidemic. The contact tracing and online vaccine appointment systems based on short messages are all the results of fully integrating open data under the cooperation of the community, the government, and enterprises. 
+With the rediscovery of civic infrastructures on the internet, civic technologists will unify opinions that are currently dispersed throughout society and transform them into a motivational force for creative policies. This will be even more important as we understand the need for our social, political and economic strategies to adapt frequently in response to ever-mutating viruses. An alliance forged between the government, the social sector and the private sector will thus be in place to meet the diverse needs of the populace in the shortest possible time.
 
-&quot;Public Infrastructure&quot; on the Internet will appear again. With the assistance of the citizen science and technology community, the scattered public opinion in society will be transformed into a driving force for co-creation of policies. Since social, political, and economic strategies must be constantly adjusted with the mutation of the virus, this momentum will become even more important. The government, society, and economic departments must form an alliance to meet the rapidly changing needs of the people in the shortest possible time. 
+In 2022, we will see a continued emphasis on “swift and safe” technologies to bring about such broad participation. Cyber attacks and disinformation will continue to threaten democracies worldwide, but Taiwan will continue to share its experiences in adopting the tactics of “fast, fair and fun” in the fight against the pandemic and infodemic. Allies of the same mind will step up and work together to build a resilient global neighborhood.
 
-In 2022, the &quot;saving effort and peace of mind&quot; technology will continue to grow stronger, bringing more large-scale collaborations. Cyber attacks and disinformation continue to threaten global democracies, but Taiwan will continue to share our experience and show how to use &quot;fast, fair, and interesting&quot; tactics to combat the harm of the epidemic and disinformation. Allies who have seen a little bit of the same will also come forward and work together to build a resilient global community. 
-
- <div style="position:relative;padding-top:max(60%,326px);height:0;width:100%"><iframe sandbox="allow-top-navigation allow-top-navigation-by-user-activation allow-downloads allow-scripts allow-same-origin allow-popups allow-modals allow-popups-to-escape-sandbox" allowfullscreen="true" style="position:absolute;border:none;width:100%;height:100%;left:0;right:0;top:0;bottom:0;" src="https://e.issuu.com/embed.html?d=ww2022&hideIssuuLogo=true&pageNumber=1&u=pdis.tw"></iframe></div> 
+<div style="position:relative;padding-top:max(60%,326px);height:0;width:100%"><iframe sandbox="allow-top-navigation allow-top-navigation-by-user-activation allow-downloads allow-scripts allow-same-origin allow-popups allow-modals allow-popups-to-escape-sandbox" allowfullscreen="true" style="position:absolute;border:none;width:100%;height:100%;left:0;right:0;top:0;bottom:0;" src="https://e.issuu.com/embed.html?d=ww2022&hideIssuuLogo=true&pageNumber=1&u=pdis.tw"></iframe></div>
