--- a/_i18n/en/_posts/2021-11-05-虛實整合-突破疫情限制.md
+++ b/_i18n/en/_posts/2021-11-05-虛實整合-突破疫情限制.md
@@ -10,18 +10,18 @@
     - "Social Innovation"
 ---
 
-The Presidential Hackathon entered the fourth this year, and the epidemic was heating up at the beginning of the run. As an important collaboration platform for the government and citizens, the team flexibly adapts and adjusts the way of participation: the first workshop is fully remote, and the second workshop is held using the concept of "Shared Reality", which is not affected by the epidemic Interrupted. 
+This year is the fourth annual Presidential Hackathon. From the start, it was affected by the rising pandemic. As an important collaboration platform for the government and citizens, the team flexibly adapted and modified the participation approach: the first workshop was fully remote, and the second workshop was held using the concept of "Shared Reality", so there was no interruption due to the pandemic.
 
-Even though the epidemic is slowing down, in my opinion, the experience and results of this integration of virtuality and reality are still worthy of your reference. 
+Even though the pandemic has now eased, in my opinion, the experience and results of this integration of virtual and physical realities are still worthy of your reference.
 
-The first and second Presidential Hackathon workshops follow the traditional hackathon process. All people gather to post ideas and discussions in the same physical location. Group briefings, provide consultations for each group member. After the outbreak of the global epidemic in 2020, each team was arranged in an independent space for the third session, and the briefing consultation with the review was also changed to video. 
+The first and second Presidential Hackathon workshops all followed the traditional hackathon process. All people gathered and were divided into teams to post ideas and discussions at the same physical location. The reviewers listened to briefings from and provided consultation to each team at a fixed time. After the outbreak of the global pandemic in 2020, the third annual workshop arranged each team in an independent space, and the briefings and consultations with the reviewers were also changed to video conferencing. 
 
-Last year’s experience has made us discover: Although the entire online approach can effectively reduce contact and ensure the effectiveness of epidemic prevention, it is difficult to ignite the sparks sparked by physical exchanges. Participation and connection quality at a fixed time limit the physical field; and the traditional full-physical approach not only has concerns about epidemic prevention, but also the sound of each table interferes with each other and may not be able to see clearly when presenting presentations. And so on physical limitations. 
+Last year’s experience has made us realize that although the fully online approach can effectively reduce contact and ensure the effectiveness of pandemic prevention, it is difficult to ignite the sparks inspired by physical exchanges. The constrains due to participation and connection quality at a fixed time are no less than those in a physical field. On the other hand, the traditional fully physical approach not only has pandemic prevention concerns, but also has various physical limitations such as mutual noise interference from each table, lack of clear visibility during briefing, etc. 
 
-In view of this, with the assistance of the "g0v group" this year, we adopted a hybrid model. In addition to the presentations and discussions in the physical space, the team also opened an exclusive hackathon hall, review and team on the online platform Gather Town All have virtual avatars. If the team needs supplements during physical discussions, or if they find experts who are not here to discuss, they can go online at any time. When discussing a stage in the virtual space and want to show the preliminary results, they can also gather together at any time. 
+In view of this, this year, with the assistance of the "jothon.g0v" team, we adopted a hybrid model. In addition to the presentations and discussions in the physical space, the team also created an exclusive hackathon hall on the online platform Gather Town, and reviewers and teams all have virtual avatars. If a team needed additional help during physical discussions, or if they could not find local experts to discuss, they could go online as a group at any time. When they reached a stage through discussions in the virtual space and wanted to show the preliminary results, they could also gather together physically at any time.
 
-As a result, the problem analysis of each team this year is indeed more in-depth, not only "explain the problem", such as the lack of integration of open data, but also "solve the problem", and work together to find specific solutions for users to participate in data governance . 
+As a result, the problem analysis of each team this year is indeed more insightful. It not only "explains the problem", such as which open data lacks integration, but also further "solves the problem" through collaboration to find specific solutions for users to participate in data governance.
 
-The main axis of the Presidential Hackathon is to use the investment of the citizen community to face existing problems, spur new ideas, and ultimately become a concrete plan to enhance the effectiveness of public services. In my opinion, the Presidential Hackathon, in addition to the impressive results of the participating teams, the collaboration process itself is a pioneering demonstration for the integration of virtual and real work models. 
+The main theme of the Presidential Hackathon is to leverage inputs of the citizen community to spur new ideas in the face of existing problems and ultimately form concrete plans to enhance the effectiveness of public services. In my opinion, in addition to the impressive results of the participating teams, in the Presidential Hackathon this year, the collaboration process itself put forward a pioneering demonstration of the integration of virtual and physical work models.
 
-I think the true spirit of "shared reality" is to allow everyone to transcend physical and time constraints and combine virtual and physical to create a space suitable for each other. Only in this way can we fully experience the feeling of being present together, and then create the future together and become an autonomous and interconnected "Multiverse". 
+I think the true spirit of "shared reality" is to allow everyone to transcend physical and time constraints and combine virtual and physical realities to create a space suitable for each other. Only in this way can we fully experience the feeling of being present together, and then create the future together to become an autonomous and interconnected "Multiverse".
