--- a/_i18n/en/_posts/2021-11-11-開發「數位疫苗護照」平台.md
+++ b/_i18n/en/_posts/2021-11-11-開發「數位疫苗護照」平台.md
@@ -1,14 +1,13 @@
 ---
   layout: "post"
   title: "Development of the \"Digital Vaccine Passport\" platform"
-  excerpt: "You do not need to install a dedicated app, you can download the digital certificate directly from the website."
+  excerpt: "Download the digital certificate directly from the website without having to install any apps."
   image: "/assets/imgs/airplane-6674689.jpg"
-  author: "唐鳳、彭美琪"
+  author: "Audrey Tang, Mickey Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
-
 
 Wearing masks, disinfecting hands, taking body temperature, implementing system, and vaccinating. With the active cooperation of the whole people, the number of confirmed cases in Taiwan has gradually decreased. With the stable arrival of vaccines, "70% of the first dose and 30% of the second dose" have successfully reached the standard at the end of October. After the vaccine was given, the people began to care: When will countries be able to open their borders and everyone can go abroad freely? 
 
@@ -18,10 +17,10 @@ Because there is no global common standard for "vaccine passport", the entry reg
 
 In order to save time and effort, as much as possible to synchronize with the international community, Taiwan’s first batch of digital certificates issued adopts the EU DCC standard launched by the European Union on July 1 this year and is used in conjunction with EU 27 countries and non-EU 16 countries. , Is currently the most common international standard. 
 
-Compared with the EU's approach, my country's platform has two differences:
+Compared with the EU's approach, Taiwan's platform made two improvements:
 
-First of all, the EU is usually a hospital or public agency at the vaccination end. After the public applies, they will issue digital certificates one by one. In Taiwan, the epidemic command center, combined with the existing NIIS system of the vaccination database, will complete the batch of records of the beaters and issue QR Code vouchers, which can be obtained upon application by the public, greatly shortening the waiting time. 
+First of all, in the EU usually a hospital or public agency makes the vaccination record. After the citizen applies, digital certificates are issued one by one. In Taiwan, the epidemic command center, combined with the existing NIIS system of the vaccination database, will complete the batch of records of the beaters and issue QR Code vouchers, which can be obtained upon application by the public, greatly shortening the waiting time. 
 
-In addition, the platform does not need to install a dedicated App, you can download the digital certificate directly from the website, and show it or print it for use at any time. The verifier also simultaneously adopts PWA (Progressive Web Application) technology, which is not only compatible with more devices, but also saves development and update maintenance costs. 
+In addition, the platform does not need to install a dedicated App, you can download the digital certificate directly from the website, and show it or print it for use at any time. The verifier also adopts PWA (Progressive Web Application) technology, which is not only compatible with more devices, but also saves development and maintenance costs. 
 
 In the post-epidemic era, global cross-border flows are gradually recovering. For Taiwan, which takes international business and trade as its important economic lifeline and has a huge amount of overseas travel, holding a "digital vaccine passport" is undoubtedly the first step to reconnect with the world. 
