--- a/_posts/2021-11-08-數位協作-民主創新.md
+++ b/_posts/2021-11-08-數位協作-民主創新.md
@@ -2,7 +2,7 @@
 layout: post
 title: 數位協作，民主創新
 excerpt: 「臺灣模式」向世界展示數位時代的古典民主價值。
-image: 
+image: /assets/imgs/acropolis-12044.jpg
 author: 唐鳳、彭筱婷
 category: blog
 tags:
