--- a/_i18n/en/_posts/2021-11-08-數位協作-民主創新.md
+++ b/_i18n/en/_posts/2021-11-08-數位協作-民主創新.md
@@ -1,43 +1,31 @@
 ---
   layout: "post"
-  title: "Digital collaboration, democratic innovation"
+  title: "How technology can strengthen democracy"
   excerpt: "The \"Taiwan Model\" shows the world the value of classical democracy in the digital age."
-  image: null
-  author: "唐鳳、彭筱婷"
+  image: /assets/imgs/acropolis-12044.jpg
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
-    - "青年事務"
+    - "Open Government"
+    - "Social Innovation"
+    - "Youth Engagement"
 ---
 
+The covid-19 pandemic continues to have a profound impact on the world. In many countries we have seen the spread of misinformation, rising public anxiety and increasing political polarisation — often inflamed by social media. The challenge of tackling the virus, and the social problems it has caused, is straining the capabilities of governments around the world.
 
-The COVID-19 epidemic has a profound impact on the world. The spread of false information brought about by the epidemic, anti-epidemic control measures, or even the monitoring disputes of authoritarian countries have not only caused widespread public anxiety and severely polarized speech, but also caused everyone to re-examine traditional government governance and policy decisions. Today, the cost of epidemic prevention and social problems brought about by the virus are still testing the crisis control capabilities of governments of various countries. 
+In Taiwan, however, we see a silver lining in the dark clouds. The pandemic has strengthened our model of collaboration between people, government and the private sector, deepening what I call “people-public-private” partnerships. This is because we have built digital infrastructure that lets people freely express opinions on policy reforms.
 
-In Taiwan, this pandemic has deepened the cooperation between public and private departments. Even though variant viruses are emerging in endlessly, the risk of the epidemic can still be effectively controlled without closing the city. 
+Our contact-tracing system, 1922 SMS, is a case in point. It was a solution jointly proposed by civictech communities in Taiwan to ensure both privacy protection and efficient contact-tracing. When Taiwan encountered its first wave of covid-19 infections in May 2021, the g0v community (spelt with a zero in place of the “o”, and pronounced “gov-zero”), a decentralised group of “civic hackers” in Taiwan, swung into action. Civic technologists enthusiastically discussed how to improve existing registration systems, which mostly relied on paper and pencil, or primitive web forms, and were often confusing or counter-productive to virus suppression measures.
 
-This is because we have built a digital infrastructure for a long time, so that people can put forward and express their opinions on policy reform at any time in their daily lives. 
+Inspired by these discussions, we worked with Taiwan’s five main telecoms firms to develop 1922 SMS. By scanning a QR code using a smartphone camera and sending a text message to the toll-free number 1922, check-in records are created and stored—with no need for an app. When necessary, contact-tracers can retrieve data from the system for quick and effective tracing. From discussion to deployment, the 1922 SMS system was built in a week. This would not have been possible without a robust partnership between the public and private sectors and the people.
 
-"1922 Newsletter System" is a clear example. In order to allow the epidemic investigation to quickly and effectively confirm the footprint of the confirmed case while protecting privacy, Taiwan's citizen science and technology community jointly proposed a solution. On the Slack channel of the g0v interim government, everyone was actively discussing how to integrate the existing multi-use paper or self-made electronic forms, and the "SMS system" soon became the most recognized proposal. 
+This is just one recent example of Taiwan’s alliance between public servants and civic-techies. Since its establishment in 2012, the g0v community has gradually grown into one of the largest open-source civic-tech communities in the world. In 2017, g0v established a system of grants to reward community proposals that can potentially benefit the public interest. This in turn inspired us to initiate an annual “presidential hackathon” event in 2018, in which civic technologists and public servants form teams and compete to develop innovative ways to upgrade government services.
 
-Based on community discussions, we, together with major telecommunications companies, have developed the "1922 SMS Real Link System". As long as you scan the QRcode of the place and send the SMS to 1922, you can keep your travel records and prevent the epidemic. When necessary, investigators can access data from the system, and accurately compare the footprints of confirmed persons and contacts. 
+For instance, in 2019 a group of engineers, designers and NGO advocates noticed limitations in the government’s open-data platform, data.gov.tw. As part of the presidential hackathon, they formed a team called Gov Data Opener and worked with the relevant government agency, the National Development Council, to make it easier to track the progress of information requests. In 2020 a team made up of landscape and geospatial-data experts, called Patch by Planting, proposed a scheme to identify urban areas where trees could be planted, using satellite data to map land use and tree distribution.
 
-From community discussion, development to official launch, the 1922 newsletter system was completed within a week. If there is no strong partnership between the public sector and the citizen community, all this cannot be so smooth. 
+Another scheme, the Rescue Action by Youth (RAY) project, offers opportunities to students. Since 2017 my office has gathered RAY students every summer to review government digital services. The students are divided into groups to focus on upgrading particular departmental websites. Through design and usability studies, they create prototypes that showcase suggested improvements. This approach has been used to upgrade the websites of the Hike Smart Taiwan service, which is used by mountaineers and hikers, and the Youth Development Administration, among others.
 
-The link between the Taiwanese government and the citizen science and technology community is the result of the accumulation of cents. Since its establishment in 2012, the g0v zero-hour government has gradually developed into one of the world’s three largest open source citizen technology communities. Starting in 2017, the g0v community launched the "g0v Citizen Technology Innovation Award", which has the potential to help the public interest The community proposal puts more force into a new form of democracy. Inspired by the g0v grant, the Taiwanese government began to host the "Presidents Cup Hackathon" in 2018, opening up private experts and public servants to team up to reshape government services with hacker culture. 
+There are many other examples. An open platform called vTaiwan, created by volunteers, brings together representatives from the public, private and social sectors to devise and debate policy solutions to problems related to the digital
+economy, from online alcohol sales to ride-hailing. A related government-maintained platform, called Join, hosts debates and helps create consensus in other policy areas. Since its launch in 2015, Join has been accessed by almost half of Taiwan’s population.
 
-For example, in 2019, I was selected as the "data application helper" of the excellent team because the community friends including engineers, designers and NGO advocates saw the "government open information platform" (data The information in .gov.tw) lacks past experience, and the public cannot confirm the status of the application for relevant information. 
-
-Through the President’s Cup hackathon, the "Data Application Assistant" and the National Development Council, which manages the government’s open data platform, are working together to study new practices. They changed their thinking from the perspective of demanders and standardized the response process so that applicants can grasp Past application situations, construct a positive interactive data application experience. This response process has been officially launched in 2020. 
-
-Another inspiring case is the 2020 excellent team "Taiwan Good Planting Land". In view of the large amount of idle vacant land in the city, three landscape and geography professionals and scholars put forward the idea of "Integrating with trees" The environment creation vision of "" was matched by the President’s Cup Hackathon. Together with the Taoyuan City Government’s Maintenance Engineering Office, they used satellite data to understand the distribution of trees and overlay the land use data. Chance. Through the Haozhiji project platform, the Taoyuan City Government has cooperated with Taiwan Semiconductor Manufacturing Company in March 2021 to plant trees in the Pingzhen Sports Park in Taoyuan City. 
-
-The President's Cup Hackathon provides a platform for citizen hackers and civil servants to communicate and collaborate together. Young students who are not engineers or civil servants can also contribute through the "Young Student Medical Examination Government Website Project". 
-
-Since 2017, my office, the Public Digital Innovation Space Group (PDIS) of the Executive Yuan, has convened young students every summer to transform the government's digital services. In the previous two years, the students examined the second and third-level agencies and business websites of the Executive Yuan, and proposed code improvement solutions; from 2019 to 2021, the students worked in groups to transform the website of a single government agency, through user interviews and ease of use Research the complete process of UI/UX and design a new website prototype for reference by related units. 
-
-Taiwan Mountaineering application one-stop service network is the perfect application of the results of the apprenticeship. In October 2019, the Executive Yuan announced the policy of "Salute to the Mountains", with the core concepts of streamlining administration and convenience, information transparency and risk co-management as its core concepts, declaring the full opening of the mountains and forests. The prototype of the mountaineering website designed by a group of RAY students in the third session became the basis for the revision of the one-stop service website for mountaineering applications, and the trainees were also invited to participate in the revision. The new website based on the thinking of "user needs" was widely praised by Taiwanese friends immediately after it went online. 
-
-In 2020, the website of the Youth Administration of the Ministry of Education will be one of the revision targets for the 4th internship. When the Youth Administration of the Ministry of Education officially launches the revision plan in 2021, in addition to adopting the revised prototype made during the internship, it will also invite Students join and directly provide user research and design suggestions. At present, the website of the Youth Department has been revised and launched in late September. We have also recorded the entire process of the collaboration of "Youth Affairs, Youth as Masters" and published it on the Internet for public inspection and reference. 
-
-The word "democracy" is disassembled. It means dēmos "people" and kratos "rule". The people shall rule. This is the original meaning of democracy. What the "Taiwan Model" shows to the world is the value of classical democracy in the digital age: making the government's decision-making process transparent to the public, assisted by digital technology and collaborative tools, can promote the initiative of the public to participate in democracy. This is not just a democratic experiment in a country, but a common direction for the world in the future. 
+Democracy—the combination of demos (people) and kratos (rule)—means “rule by the people”.  The “Taiwan model” demonstrates how the use of digital platforms can strengthen democracy, by giving everyone a voice and enabling a government that works not just _for_ the people but _with_ the people.
