--- a/_i18n/zh-TW/_posts/2021-11-08-數位協作-民主創新.md
+++ b/_i18n/zh-TW/_posts/2021-11-08-數位協作-民主創新.md
@@ -2,13 +2,13 @@
 layout: post
 title: 數位協作，民主創新
 excerpt: 「臺灣模式」向世界展示數位時代的古典民主價值。
-image: 
+image: /assets/imgs/acropolis-12044.jpg
 author: 唐鳳、彭筱婷
 category: blog
 tags:
   - 開放政府
   - 社會創新
-  - 青年事務
+  - 青年參與
 ---
 
 COVID-19 疫情對全球帶來深遠影響。疫情帶來的假訊息擴散、防疫管制措施，甚或是威權國家的監控爭議，不只導致廣泛的公眾焦慮，讓言論呈現嚴重的兩極分化，也使所有人開始重新審視傳統的政府治理和政策決策。時至今日，病毒帶來的防疫成本和社會問題，仍然處處考驗著各國政府的危機控管能力。
