--- a/_i18n/en/_posts/2021-11-08-數位協作-民主創新.md
+++ b/_i18n/en/_posts/2021-11-08-數位協作-民主創新.md
@@ -11,11 +11,11 @@
     - "Youth Engagement"
 ---
 
-The covid-19 pandemic continues to have a profound impact on the world. In many countries we have seen the spread of misinformation, rising public anxiety and increasing political polarisation — often inflamed by social media. The challenge of tackling the virus, and the social problems it has caused, is straining the capabilities of governments around the world.
+The COVID-19 pandemic continues to have a profound impact on the world. In many countries we have seen the spread of misinformation, rising public anxiety and increasing political polarisation — often inflamed by social media. The challenge of tackling the virus, and the social problems it has caused, is straining the capabilities of governments around the world.
 
 In Taiwan, however, we see a silver lining in the dark clouds. The pandemic has strengthened our model of collaboration between people, government and the private sector, deepening what I call “people-public-private” partnerships. This is because we have built digital infrastructure that lets people freely express opinions on policy reforms.
 
-Our contact-tracing system, 1922 SMS, is a case in point. It was a solution jointly proposed by civictech communities in Taiwan to ensure both privacy protection and efficient contact-tracing. When Taiwan encountered its first wave of covid-19 infections in May 2021, the g0v community (spelt with a zero in place of the “o”, and pronounced “gov-zero”), a decentralised group of “civic hackers” in Taiwan, swung into action. Civic technologists enthusiastically discussed how to improve existing registration systems, which mostly relied on paper and pencil, or primitive web forms, and were often confusing or counter-productive to virus suppression measures.
+Our contact-tracing system, 1922 SMS, is a case in point. It was a solution jointly proposed by civictech communities in Taiwan to ensure both privacy protection and efficient contact-tracing. When Taiwan encountered its first wave of COVID-19 infections in May 2021, the g0v community (spelt with a zero in place of the “o”, and pronounced “gov-zero”), a decentralised group of “civic hackers” in Taiwan, swung into action. Civic technologists enthusiastically discussed how to improve existing registration systems, which mostly relied on paper and pencil, or primitive web forms, and were often confusing or counter-productive to virus suppression measures.
 
 Inspired by these discussions, we worked with Taiwan’s five main telecoms firms to develop 1922 SMS. By scanning a QR code using a smartphone camera and sending a text message to the toll-free number 1922, check-in records are created and stored—with no need for an app. When necessary, contact-tracers can retrieve data from the system for quick and effective tracing. From discussion to deployment, the 1922 SMS system was built in a week. This would not have been possible without a robust partnership between the public and private sectors and the people.
 
