--- a/_i18n/en/_posts/2021-01-22-通往未來的每一步.md
+++ b/_i18n/en/_posts/2021-01-22-通往未來的每一步.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 On the last day of 2020, Taiwan braced itself for the coldest New Year's Eve ever in 16 years. Many people rang in the new year against the cold wind and apparent temperature near zero degrees Celsius.
